@@ -3,7 +3,10 @@ BuildingsPy Changelog
 
 Version 1.7.0, April 14, 2017 -- Release 1.7
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-- Extend class buildingspy.development.validator 
+- Updated buildingspy.development.refactor.write_package_order() to
+  correct a bug in generating package.order file for package-level
+  constants.
+- Extend class buildingspy.development.validator
   to check the consistency and correctness of .mos and .mo files.
 - Added validation of .mos/.mo files to unit test script.
 
